--- a/Chart4.html
+++ b/Chart4.html
@@ -225,6 +225,7 @@
     </script>
 </head>
 <body>
+test
     <table class="columns">
         <tr>
             <td><div id="Chart1_Div" style="border: 1px solid #ccc"></div></td>
