--- a/Chart10.html
+++ b/Chart10.html
@@ -24,7 +24,7 @@
 
             var options = {
                 title: '外資',
-                width: '50%',
+                width: 400,
                 height: 150,
                 bar: { groupWidth: '90%' },
                 legend: { position: 'none' },
@@ -103,7 +103,7 @@
 
             var options = {
                 title: '控盤',
-                width: '50%',
+                width: 400,
                 height: 150,
                 bar: { groupWidth: '90%' },
                 legend: { position: 'none' },
