--- a/Chart10.html
+++ b/Chart10.html
@@ -25,7 +25,7 @@
             var options = {
                 title: '外資',
                 width: 400,
-                height: 150,
+                height: 250,
                 bar: { groupWidth: '90%' },
                 legend: { position: 'none' },
             };
@@ -44,8 +44,8 @@
 
             var options = {
                 title: '投信',
-                width: 200,
-                height: 150,
+                width: 400,
+                height: 250,
                 bar: { groupWidth: '90%' },
                 legend: { position: 'none' },
             };
@@ -64,8 +64,8 @@
 
             var options = {
                 title: '避險',
-                width: 200,
-                height: 150,
+                width: 400,
+                height: 250,
                 bar: { groupWidth: '90%' },
                 legend: { position: 'none' },
             };
@@ -82,9 +82,9 @@
 
 
             var options = {
-                title: '法人',
-                width: 200,
-                height: 150,
+                title: '三大法人',
+                width: 400,
+                height: 250,
                 bar: { groupWidth: '90%' },
                 legend: { position: 'none' },
             };
@@ -102,9 +102,9 @@
 
 
             var options = {
-                title: '控盤',
+                title: '大額買盤',
                 width: 400,
-                height: 150,
+                height: 250,
                 bar: { groupWidth: '90%' },
                 legend: { position: 'none' },
             };
@@ -123,8 +123,8 @@
 
             var options = {
                 title: '散戶',
-                width: 200,
-                height: 150,
+                width: 400,
+                height: 250,
                 bar: { groupWidth: '90%' },
                 legend: { position: 'none' },
             };
@@ -143,8 +143,8 @@
 
             var options = {
                 title: '融資',
-                width: 200,
-                height: 150,
+                width: 400,
+                height: 250,
                 bar: { groupWidth: '90%' },
                 legend: { position: 'none' },
             };
@@ -161,9 +161,9 @@
 
 
             var options = {
-                title: '派收',
-                width: 200,
-                height: 150,
+                title: '買賣分公司',
+                width: 400,
+                height: 250,
                 bar: { groupWidth: '90%' },
                 legend: { position: 'none' },
             };
@@ -182,7 +182,7 @@
             var options = {
                 title: '主力密度',
                 width: 400,
-                height: 150,
+                height: 250,
                 hAxis: { title: 'Day', minValue: -10, maxValue: 0 },
                 vAxis: { title: 'Star' },
                 legend: 'none'
