--- a/Chart4.html
+++ b/Chart4.html
@@ -241,7 +241,7 @@
           <div id="Chart8_Div" style="width: 350px; height:180px;"></div>
         </td>
       </tr>
-      <tr>
+      <tr align="top">
         <td colSpan=2>
           <div id="Chart9_Div" style="align: center; width: 700px; height: 150px;"></div>
         </td>
