--- a/Chart4.html
+++ b/Chart4.html
@@ -193,6 +193,8 @@
 
             var options = {
                 title: '主力密度',
+               width: 700,
+                height:150,
                  hAxis: { title: 'Day', minValue: -10, maxValue: 0 },
                 vAxis: { title: 'Star' },
                 legend: 'none'
