--- a/Chart10.html
+++ b/Chart10.html
@@ -216,7 +216,7 @@
       </tr>
       <tr align="top">
         <td colSpan=2>
-          <div id="Chart9_Div" style="align: center; width: 700px; height: 150px;"></div>
+          <div id="Chart9_Div"></div>
         </td>
       </tr>
     </table>
