--- a/Chart10.html
+++ b/Chart10.html
@@ -215,8 +215,9 @@
         </td>
       </tr>
       <tr >
-        <td colSpan=2>
-          <div id="Chart9_Div"></div>
+          <td colspan="2">
+        
+            <div id="Chart9_Div" style="border: 1px solid #ccc"></div>
         </td>
       </tr>
     </table>
