--- a/Chart10.html
+++ b/Chart10.html
@@ -167,7 +167,7 @@
                 title: '主力密度',
                 width: 700,
                 height: 150,
-                hAxis: { title: 'Day', minValue: -10, maxValue: 0 },
+                hAxis: { title: 'Day' },
                 vAxis: { title: 'Star' },
                 legend: 'none'
             };
