--- a/Chart10.html
+++ b/Chart10.html
@@ -214,10 +214,10 @@
           <div id="Chart8_Div" style="width: 350px; height:180px;"></div>
         </td>
       </tr>
-      <tr >
+       <tr valign="top">
           <td colspan="2">
         
-            <div id="Chart9_Div" style="border: 1px solid #ccc"></div>
+            <div id="Chart9_Div" ></div>
         </td>
       </tr>
     </table>
