--- a/Chart10.html
+++ b/Chart10.html
@@ -165,8 +165,6 @@
 
             var options = {
                 title: '主力密度',
-                width: 700,
-                height: 200,
                 hAxis: { title: 'Day' },
                 vAxis: { title: 'Star' },
                 legend: 'none'
@@ -217,7 +215,7 @@
        <tr valign="top">
           <td colspan="2">
         
-            <div id="Chart9_Div" ></div>
+            <div id="Chart9_Div" style="width: 700px; height:180px;" ></div>
         </td>
       </tr>
     </table>
