--- a/Chart10.html
+++ b/Chart10.html
@@ -215,7 +215,7 @@
        <tr valign="top">
           <td colspan="2">
         
-            <div id="Chart9_Div" style="width: 800px; height:180px;"></div>
+            <div id="Chart9_Div" style="width: 800px; height:180px; border: 1px solid #ccc;"></div>
         </td>
       </tr>
     </table>
