--- a/Chart10.html
+++ b/Chart10.html
@@ -165,7 +165,7 @@
 
             var options = {
                 title: '主力密度',
-                titleTextStyle: {color: '#FF0000'},
+                titleTextStyle: {fontSize:'14'},
                 hAxis: { title: 'Day' },
                 vAxis: { title: 'Star' },
                 legend: 'none'
