--- a/Chart10.html
+++ b/Chart10.html
@@ -23,8 +23,9 @@
 
 
             var options = {
-                title: '外資',
-                 bar: { groupWidth: '90%' },
+                title: '外資買賣',
+                titleTextStyle: {fontSize:'14'},
+                bar: { groupWidth: '90%' },
                 legend: { position: 'none' },
             };
             var chart = new google.visualization.ColumnChart(document.getElementById('Chart1_Div'));
@@ -41,7 +42,8 @@
 
 
             var options = {
-                title: '投信',
+                title: '投信買賣',
+                titleTextStyle: {fontSize:'14'},
                 bar: { groupWidth: '90%' },
                 legend: { position: 'none' },
             };
@@ -59,7 +61,8 @@
 
 
             var options = {
-                title: '避險',
+                title: '自營避險',
+                titleTextStyle: {fontSize:'14'},
                 bar: { groupWidth: '90%' },
                 legend: { position: 'none' },
             };
@@ -77,7 +80,8 @@
 
             var options = {
                 title: '三大法人',
-                 bar: { groupWidth: '90%' },
+                titleTextStyle: {fontSize:'14'},
+                bar: { groupWidth: '90%' },
                 legend: { position: 'none' },
             };
             var chart = new google.visualization.ColumnChart(document.getElementById('Chart4_Div'));
@@ -94,8 +98,9 @@
 
 
             var options = {
-                title: '大額買盤',
-                 bar: { groupWidth: '90%' },
+                title: '大額買賣',
+                titleTextStyle: {fontSize:'14'},
+                bar: { groupWidth: '90%' },
                 legend: { position: 'none' },
             };
             var chart = new google.visualization.ColumnChart(document.getElementById('Chart5_Div'));
@@ -112,8 +117,9 @@
 
 
             var options = {
-                title: '散戶',
-                 bar: { groupWidth: '90%' },
+                title: '散戶買賣',
+                titleTextStyle: {fontSize:'14'},
+                bar: { groupWidth: '90%' },
                 legend: { position: 'none' },
             };
             var chart = new google.visualization.ColumnChart(document.getElementById('Chart6_Div'));
@@ -130,8 +136,9 @@
 
 
             var options = {
-                title: '融資',
-                 bar: { groupWidth: '90%' },
+                title: '融資買賣',
+                titleTextStyle: {fontSize:'14'},
+                bar: { groupWidth: '90%' },
                 legend: { position: 'none' },
             };
             var chart = new google.visualization.ColumnChart(document.getElementById('Chart7_Div'));
@@ -147,8 +154,9 @@
 
 
             var options = {
-                title: '買賣分公司',
-                 bar: { groupWidth: '90%' },
+                title: '分公司買賣差',
+                titleTextStyle: {fontSize:'14'},
+                bar: { groupWidth: '90%' },
                 legend: { position: 'none' },
             };
             var chart = new google.visualization.ColumnChart(document.getElementById('Chart8_Div'));
@@ -164,7 +172,7 @@
 
 
             var options = {
-                title: '主力密度',
+                title: '主力分布',
                 titleTextStyle: {fontSize:'14'},
                 hAxis: { title: 'Day' },
                 vAxis: { title: 'Star' },
