--- a/Chart10.html
+++ b/Chart10.html
@@ -189,6 +189,12 @@
 </head>
 <body>
     <table align="center">
+         <tr valign="down">
+          <td colspan="2">
+        
+            <div id="title_Div" style="align: center;border: 1px solid #ccc;">##title</div>
+        </td>
+      </tr>
       <tr valign="top">
         <td style="width: 50%;">
           <div id="Chart1_Div" style="width: 400px; height:180px; border: 1px solid #ccc;"></div>
