--- a/Chart10.html
+++ b/Chart10.html
@@ -192,7 +192,7 @@
          <tr valign="down">
           <td colspan="2">
         
-            <div id="title_Div" style="font-size:16px;align: center;border: 1px solid #ccc;">##title</div>
+            <div id="title_Div" style="font-size: 16px;align: center;border: 1px solid #ccc;">title</div>
         </td>
       </tr>
       <tr valign="top">
