--- a/Chart10.html
+++ b/Chart10.html
@@ -189,10 +189,10 @@
 </head>
 <body>
     <table align="center">
-         <tr valign="down">
+         <tr >
           <td colspan="2">
         
-            <div id="title_Div" style="font-size: 16px;align: center;border: 1px solid #ccc;">title</div>
+            <div id="title_Div" style="font-size: 16px;">title</div>
         </td>
       </tr>
       <tr valign="top">
