--- a/Chart10.html
+++ b/Chart10.html
@@ -190,9 +190,9 @@
 <body>
     <table align="center">
          <tr >
-          <td colspan="2">
+          <td colspan="2" align="center">
         
-            <div id="title_Div" style="font-size:24px;align: center;">title</div>
+            <div id="title_Div" style="font-size:24px;">title</div>
         </td>
       </tr>
       <tr valign="top">
