--- a/Chart10.html
+++ b/Chart10.html
@@ -192,7 +192,7 @@
          <tr >
           <td colspan="2" align="center">
         
-            <div id="title_Div" style="font-size:24px;">title</div>
+            <div id="title_Div" style="font-size:24px;border: 1px solid #ccc;">title</div>
         </td>
       </tr>
       <tr valign="top">
