--- a/Chart10.html
+++ b/Chart10.html
@@ -233,6 +233,13 @@
             <div id="Chart9_Div" style="align: center;width: 800px; height:180px; border: 1px solid #ccc;"></div>
         </td>
       </tr>
+         <tr valign="top">
+          <td colspan="2">
+        
+            <div id="time_Div">更新時間:##time</div><br>
+             <a href="##url">外部參考</a>
+        </td>
+      </tr>
     </table>
 </body>
 </html>
