--- a/Chart10.html
+++ b/Chart10.html
@@ -195,6 +195,12 @@
             <div id="title_Div" style="font-size:28px;border: 1px solid #ccc;">title</div>
         </td>
       </tr>
+         <tr >
+          <td colspan="2" align="left">
+        
+            <div id="time1_Div" >更新時間:##time</div>
+        </td>
+      </tr>
       <tr valign="top">
         <td style="width: 50%;">
           <div id="Chart1_Div" style="width: 400px; height:180px; border: 1px solid #ccc;"></div>
@@ -234,7 +240,7 @@
         </td>
       </tr>
          <tr valign="top">
-          <td colspan="2">
+         <td colspan="2" align="left">
         
             <div id="time_Div">更新時間:##time</div><br>
              <a href="##url">外部參考</a>
