--- a/Chart10.html
+++ b/Chart10.html
@@ -196,7 +196,7 @@
         </td>
       </tr>
          <tr >
-          <td colspan="2" align="left">
+          <td colspan="2" align="right">
         
             <div id="time1_Div" >更新時間:##time</div>
         </td>
@@ -240,7 +240,7 @@
         </td>
       </tr>
          <tr valign="top">
-         <td colspan="2" align="left">
+         <td colspan="2" align="right">
         
             <div id="time_Div">更新時間:##time</div><br>
              <a href="##url">外部參考</a>
