--- a/Chart10.html
+++ b/Chart10.html
@@ -188,7 +188,7 @@
     </script>
 </head>
 <body>
-    <table align="center">
+    <table align="center" style="width: 100%;">
          <tr >
           <td colspan="2" align="center">
         
