--- a/Chart10.html
+++ b/Chart10.html
@@ -203,10 +203,10 @@
       </tr>
       <tr valign="top">
         <td style="width: 50%;">
-          <div id="Chart1_Div" style="width: 400px; height:180px; border: 1px solid #ccc;"></div>
+          <div id="Chart1_Div" style="width: 50%; height:180px; border: 1px solid #ccc;"></div>
         </td>
         <td style="width: 50%;">
-          <div id="Chart5_Div" style="width: 400px; height:180px; border: 1px solid #ccc;"></div>
+          <div id="Chart5_Div" style="width:50%; height:180px; border: 1px solid #ccc;"></div>
         </td>
       </tr>
        <tr valign="top">
