--- a/Chart10.html
+++ b/Chart10.html
@@ -202,39 +202,39 @@
         </td>
       </tr>
       <tr valign="top">
-        <td style="width: 50%;">
+        <td style="width: 50%;" align="right">
           <div id="Chart1_Div" style="width: 50%; height:180px; border: 1px solid #ccc;"></div>
         </td>
-        <td style="width: 50%;">
+        <td style="width: 50%;" align="left">
           <div id="Chart5_Div" style="width:50%; height:180px; border: 1px solid #ccc;"></div>
         </td>
       </tr>
        <tr valign="top">
-        <td style="width: 50%;">
-          <div id="Chart2_Div" style="width: 400px; height:180px; border: 1px solid #ccc;"></div>
+        <td style="width: 50%;" align="right">
+          <div id="Chart2_Div" style="width: 50%; height:180px; border: 1px solid #ccc;"></div>
         </td>
-        <td style="width: 50%;">
-          <div id="Chart6_Div" style="width: 400px; height:180px; border: 1px solid #ccc;"></div>
+        <td style="width: 50%;" align="left">
+          <div id="Chart6_Div" style="width: 50%; height:180px; border: 1px solid #ccc;"></div>
         </td>
       </tr>
          <tr valign="top">
-        <td style="width: 50%;">
-          <div id="Chart3_Div" style="width: 400px; height:180px; border: 1px solid #ccc;"></div>
+         <td style="width: 50%;" align="right">
+          <div id="Chart3_Div" style="width: 50%; height:180px; border: 1px solid #ccc;"></div>
         </td>
-        <td style="width: 50%;">
-          <div id="Chart7_Div" style="width: 400px; height:180px; border: 1px solid #ccc;"></div>
+         <td style="width: 50%;" align="left">
+          <div id="Chart7_Div" style="width: 50%; height:180px; border: 1px solid #ccc;"></div>
         </td>
       </tr>
           <tr valign="top">
-        <td style="width: 50%;">
-          <div id="Chart4_Div" style="width: 400px; height:180px; border: 1px solid #ccc;"></div>
+         <td style="width: 50%;" align="right">
+          <div id="Chart4_Div" style="width: 50%; height:180px; border: 1px solid #ccc;"></div>
         </td>
-        <td style="width: 50%;">
-          <div id="Chart8_Div" style="width: 400px; height:180px; border: 1px solid #ccc;"></div>
+         <td style="width: 50%;" align="left">
+          <div id="Chart8_Div" style="width: 50%; height:180px; border: 1px solid #ccc;"></div>
         </td>
       </tr>
        <tr valign="top">
-          <td colspan="2">
+          <td colspan="2" align="center">
         
             <div id="Chart9_Div" style="align: center;width: 800px; height:180px; border: 1px solid #ccc;"></div>
         </td>
