--- a/Chart10.html
+++ b/Chart10.html
@@ -198,7 +198,7 @@
          <tr >
           <td colspan="2" align="right">
         
-            <div id="time1_Div" >日期:##chipdate</div>
+            <div id="time1_Div" style="font-size:16px;">日期:##chipdate</div>
         </td>
       </tr>
       <tr valign="top">
