--- a/Chart10.html
+++ b/Chart10.html
@@ -247,6 +247,7 @@
           <tr valign="top">
          <td colspan="2" align="right">
              <a href="##url">外部參考</a>
+             <a href="javascript:window.close();">關閉視窗</a>
              <input onclick="window.close();" value="關閉視窗" type="button">
         </td>
       </tr>
