--- a/Chart10.html
+++ b/Chart10.html
@@ -176,6 +176,7 @@
                 titleTextStyle: {fontSize:'18'},
                 hAxis: { title: 'Day' },
                 vAxis: { title: 'Star' },
+                pointSize: 18,
                 legend: 'none'
             };
 
