--- a/Chart10.html
+++ b/Chart10.html
@@ -199,7 +199,7 @@
          <tr >
           <td colspan="2" align="right">
         
-            <div id="time1_Div" style="font-size:18px;">日期:##chipdate</div>
+            <div id="time1_Div" style="font-size:18px;font-weight: bold;">日期:##chipdate</div>
         </td>
       </tr>
       <tr valign="top">
