--- a/Chart10.html
+++ b/Chart10.html
@@ -199,7 +199,7 @@
          <tr >
           <td colspan="2" align="right">
         
-            <div id="time1_Div" style="font-size:18px;font-weight: bold;">日期:##chipdate</div>
+            <div id="time1_Div" style="font-size:18px;font-weight: bold;">D1日期:##chipdate</div>
         </td>
       </tr>
       <tr valign="top">
@@ -247,7 +247,7 @@
       </tr>
           <tr valign="top">
          <td colspan="2" align="right">
-             <a href="##url">外部參考</a>
+              <a href="##wurl">權證搜尋參考</a><a href="##3url">三大法人參考</a>
           </td>
       </tr>
     </table>
