--- a/Chart10.html
+++ b/Chart10.html
@@ -247,7 +247,7 @@
       </tr>
           <tr valign="top">
          <td colspan="2" align="right">
-              <a href="##wurl">權證搜尋參考</a><a href="##3url">三大法人參考</a>
+              <a href="##wurl">■權證搜尋參考</a><a href="##3url">■三大法人參考</a>
           </td>
       </tr>
     </table>
