--- a/08-25/85B476CA.html
+++ b/08-25/85B476CA.html
@@ -1,6 +1,7 @@
 ﻿<html>
 <head>
-	<title>奇力新 (2456) 近日籌碼</title>
+<meta name="description" content="簡單好用籌碼分析" /> 
+<title>奇力新 (2456) 近日籌碼</title>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
         google.charts.load("current", { packages: ['corechart'] });
