--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <html> <head>
-<frameset rows=5%,95%>
+<frameset rows=1%,99%  frameborder=0 framespacing=0>
 　　<frame src=demo1.htm name=navigateFrame>
   <frame src=demo2.htm name=contentFrame>
 　　
