--- a/main.html
+++ b/main.html
@@ -1,9 +1,19 @@
 <html> <head>
 <frameset rows=1%,99%  frameborder=0 framespacing=0>
-　　<frame src=demo1.htm name=navigateFrame>
-  <frame src=demo2.htm name=contentFrame>
+　　<frame src='demo1.htm' name='navigateFrame'>
+  <frame src='demo2.htm' name='contentFrame'>
 　　
 </frameset>
+  
+  <script type="text/javascript">
+var mode=1;
+
+if( mode == 1 )
+    parent.contentFrame.location="Chart10.html";
+else
+    parent.contentFrame.location="Chart4.html";
+</script>
+  
 </head> 
 <body> </body> 
 </html>
