--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <html> <head>
 <frameset rows=1%,99%  frameborder=0 framespacing=0>
-　　<frame src='demo1.htm' name='navigateFrame'>
-  <frame src='demo2.htm' name='contentFrame'>
+　　<frame src="javascript:void(0)" name='navigateFrame'>
+  <frame src="javascript:void(0)" name='contentFrame'>
 　　
 </frameset>
   
