--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 var mode=1;
 
 if( mode == 1 )
-    parent.contentFrame.location="Chart10.html";
+    parent.contentFrame.location="http://webchip.tk/Chart10.html";
 else
-    parent.contentFrame.location="Chart4.html";
+    parent.contentFrame.location="http://webchip.tk/Chart4.html";
 </script>
   
 </head> 
