--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
   
   <script language="javascript">
 function GetNowURL(){
-  top.frames["main"].location.href = "http://webchip.tk/Chart10.html";
+  top.frames["main"].location.href = "http://webchip.tk/08-28/E30C0216.html";
   
 }  
 </script>
