--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 }
     
 function GetNowURL(){
-  top.frames["main"].location.href = "http://iwarrantinfo.masterlink.com.tw/Mobile/wSearch.aspx?ul="& QueryString("id");
+  top.frames["main"].location.href = "http://iwarrantinfo.masterlink.com.tw/Mobile/wSearch.aspx?ul="+QueryString("id");
   
 }  
 </script>
