--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@ function GetNowURL(){
 </script>
   
   
-<frameset rows="1%,99%"  frameborder="0" framespacing="0" onload="GetNowURL();">
+<frameset rows="5%,*"  frameborder="1" framespacing="0" onload="GetNowURL();">
 　 <frame name="top" src="about:blank">
   <frame name="main" src="about:blank">　　
 </frameset>
