--- a/main.html
+++ b/main.html
@@ -31,7 +31,8 @@ function GetNowURL(){
 	}
 	else if (site=="2")
 	{
-	top.frames["main"].location.href = "http://iwarrantinfo.masterlink.com.tw/Mobile/wSearch.aspx?ul="+QueryString("id");
+	top.frames["main"].location.href = "http://iwarrant.capital.com.tw/Mobile/WANT/mWSearch.aspx?ul="+QueryString("id");
+		
 	}
 	else
 	{ 
