--- a/main.html
+++ b/main.html
@@ -46,8 +46,8 @@ function GetNowURL(){
   
   
 <frameset rows="5%,*"  frameborder="1" framespacing="0" onload="GetNowURL();">
-　 <frame name="top" src="about:blank">
-  <frame name="main" src="about:blank">　　
+　 <frame name="top" src="ws.html">
+  <frame name="main" src="about:blnk">　　
 </frameset>
 
 
