--- a/ws.html
+++ b/ws.html
@@ -55,7 +55,7 @@ function GetNowURL(site){
   
 </head>
 <body>
-<table>
+<table align="right" valign="bottom">
 <tr>
 <td><input type="button" Value="元富證卷" onclick="GetNowURL('1');"></td>
 <td><input type="button" Value="群益證卷" onclick="GetNowURL('2');"></td>
