--- a/ws.html
+++ b/ws.html
@@ -54,7 +54,7 @@ function GetNowURL(site){
   
 </head>
 <body>
-<table align="right" valign="bottom">
+<table align="right" valign="top">
 <tr>
 <td><input type="button" Value="凱基證券" onclick="GetNowURL('3');" style="width:100px;height:30px;border:2px #9999FF dashed;background-color:pink;"></td>
 <td><input type="button" Value="群益證券" onclick="GetNowURL('2');" style="width:100px;height:30px;border:2px #9999FF dashed;background-color:pink;"></td>
