--- a/main.html
+++ b/main.html
@@ -46,7 +46,7 @@ function GetNowURL(){
   
   
 <frameset rows="3%,*"  frameborder="0" framespacing="0" onload="GetNowURL();">
-　 <frame name="top" src="ws.html">
+　 <frame name="top" src="ws.html" noresize="noresize">
   <frame name="main" src="about:blnk">　　
 </frameset>
 
