--- a/main.html
+++ b/main.html
@@ -45,7 +45,7 @@ function GetNowURL(){
 </script>
   
   
-<frameset rows="3%,*"  frameborder="0" framespacing="0" onload="GetNowURL();">
+<frameset rows="50,*"  frameborder="0" framespacing="0" onload="GetNowURL();">
 　 <frame name="top" src="ws.html" noresize="noresize">
   <frame name="main" src="about:blnk">　　
 </frameset>
