--- a/main.html
+++ b/main.html
@@ -46,11 +46,11 @@ function GetNowURL(){
   
   
 <frameset rows="50,*"  frameborder="0" framespacing="0" onload="GetNowURL();">
-　 <frame name="top" src="ws.html" noresize="noresize">
+　 <frame name="top" src="ws.html" noresize="noresize" scrolling="no">
   <frame name="main" src="about:blnk">　　
 </frameset>
 
-
+ 
 </head> 
 <body> </body> 
 </html>
