--- a/ws.html
+++ b/ws.html
@@ -59,11 +59,8 @@ function GetNowURL(site){
 <body>
 <table align="right" valign="top">
 <tr>
-<!--
-<td><input type="button" Value="凱基證券" onclick="GetNowURL('3');" style="width:100px;height:30px;border:2px #9999FF dashed;background-color:pink;"></td>
--->
-<td><input type="button" Value="群益證券" onclick="GetNowURL('2');" style="font-size:15px;font-weight: bold;width:100px;height:48px;border:2px #9999FF dashed;background-color:pink;"></td>
-<td><input type="button" Value="元富證券" onclick="GetNowURL('1');" style="font-size:15px;font-weight: bold;width:100px;height:48px;border:2px #9999FF dashed;background-color:pink;"></td>
+<td><input type="button" Value="群益證券" onclick="GetNowURL('2');" style="font-size:15px;font-weight: bold;width:100px;height:48px;border:2px #9999FF dashed;background-color:Orange;"></td>
+<td><input type="button" Value="元富證券" onclick="GetNowURL('1');" style="font-size:15px;font-weight: bold;width:100px;height:48px;border:2px #9999FF dashed;background-color:Orange ;"></td>
 </tr>
 </table>
    
