--- a/ws.html
+++ b/ws.html
@@ -56,7 +56,7 @@ function GetNowURL(site){
 </script>
   
 </head>
-<body>
+<body style="margin-top:5px;">
 <table align="right" valign="top">
 <tr>
 <td><input type="button" Value="群益證券" onclick="GetNowURL('2');" style="font-size:16px;font-weight: bold;width:100px;height:45px;border:2px #9999FF dashed;background-color:Orange;"></td>
