--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <html> <head>
-  
+  <title>權證搜尋網站</title>
   <script language="javascript">
     function QueryString(name) 
 {
@@ -52,5 +52,7 @@ function GetNowURL(){
 
  
 </head> 
-<body> </body> 
+<body> <div>僅提供權證搜尋參考</div>
+	
+	</body> 
 </html>
